--- a/views/account.ejs
+++ b/views/account.ejs
@@ -12,7 +12,11 @@
 
 <div class = "navbar">
     <div class = "web-logo">
-        <img src = "/assets/CARSPOTTERIMG.png" alt = "CarSpotters">
+        <% if (theme == "dark") { %>
+            <img src = "/assets/LogoWHITE.png" alt = "CarSpotters">
+        <% } else { %>
+            <img src = "/assets/LogoBLACK.png" alt = "CarSpotters">
+        <% } %>
     </div>
 </div>
 
