--- a/views/viewAllPosts.ejs
+++ b/views/viewAllPosts.ejs
@@ -134,4 +134,15 @@
     <% } %>
 </div>
 </body>
+
+  <script>
+    var posts = JSON.stringify(`<%=posts%>`);
+    for (let i = 0; i < `<%=posts.length%>`; i++) {
+      console.log(JSON.parse(posts[i]));
+
+    } 
+    
+  </script>
+
+
 </html>
