notifications now working for almsot all actions, able to view and go to all area of notifications

--- a/src/stylesheet/pc.css
+++ b/src/stylesheet/pc.css
@@ -271,6 +271,9 @@
     border: 1px solid var(--border-standard);
     background-color: var(--standard-tertiary-background);
     width: 25%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main-container .back .return button {
