--- a/src/stylesheet/notification.css
+++ b/src/stylesheet/notification.css
@@ -15,6 +15,15 @@
     border-bottom: 1px solid var(--border-standard);
     height: 7.5rem;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.notification-container .notification-header .notification-title {
+    color: var(--text-title);
+    font-size: 1.5rem;
+    padding: 1rem;
 }
 
 .notification-container .notification {
@@ -44,6 +53,29 @@
     border: 1px solid var(--border-standard);
 }
 
+.notification-container .notification .notification-photo-container .notification-photo .notification-icon {
+    position: absolute;
+    padding: 0.1rem;
+    height: 1rem;
+}
+
+.notification-container .notification .notification-photo-container .notification-photo .notification-icon .icon{
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 50%;
+    background-color: rgb(144, 0, 0);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--border-standard);   
+}
+
+.notification-container .notification .notification-photo-container .notification-photo .notification-icon .icon p{
+    color: var(--text-title);
+    font-size: 1rem;
+    font-weight: bold;
+}
+
 .notification-container .notification .notification-content {
     width: 100%;
     height: 100%;
@@ -68,4 +100,17 @@
 
 .notification-container button:hover {
     background-color: var(--standard-secondary-background);
+}
+
+.notification-container .no-notifications {
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.notification-container .no-notifications p {
+    color: var(--text-title);
+    font-size: 1rem;
 }
